--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "psr-4": {
-            "RKW\\Wepstra\\": "Classes/"
+            "RKW\\RkwWepstra\\": "Classes"
         }
     },
     "extra": {
