--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     ],
     "require": {
         "typo3/cms-core": "^7.6.0 || ^8.7.0",
-        "rkw/rkw-mailer": "~7.6.10",
-        "rkw/rkw-registration": "~7.6.10"
+        "rkw/rkw-mailer": ">=7.6.10 <=8.7.99",
+        "rkw/rkw-registration": ">=7.6.10 <=8.7.99"
     },
     "autoload": {
         "psr-4": {
