[REFACTORING] update in composer.json and ext_emconf.php

--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "^7.6.0 || ^8.7.0",
-        "rkw/rkw-mailer": ">=7.6.10 <=8.7.99",
-        "rkw/rkw-registration": ">=7.6.10 <=8.7.99"
+        "typo3/cms-core": "~7.6.0 || ~8.7.0",
+        "rkw/rkw-mailer": "~8.7.0",
+        "rkw/rkw-registration": "~8.7.0"
     },
     "autoload": {
         "psr-4": {
