[UPDATE] update dependency rkw_mailer

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "require": {
         "typo3/cms-core": "~7.6.0 || ~8.7.0",
-        "rkw/rkw-mailer": "~8.7.0",
+        "rkw/rkw-basics" : "~8.7.0",
+        "rkw/rkw-mailer": "~8.7.0 || ~9.5.0",
         "rkw/rkw-registration": "~8.7.17"
     },
     "autoload": {
