--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     ],
     "require": {
-        "typo3/cms-core": "~7.6.0 || ~8.7.0",
-        "rkw/rkw-basics" : "~8.7.0",
-        "rkw/rkw-mailer": "~8.7.0 || ~9.5.0",
-        "rkw/rkw-registration": "~8.7.17"
+        "typo3/cms-core": "~9.5.0",
+        "rkw/rkw-basics" : "~9.5.0 || dev-feature/upgrade9.5",
+        "rkw/rkw-mailer": "~9.5.0",
+        "rkw/rkw-registration": "~9.5.0 || dev-feature/upgrade9.5"
     },
     "autoload": {
         "psr-4": {
