--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "typo3/cms-core": "~9.5.0",
         "rkw/rkw-basics" : "~9.5.0 || dev-feature/upgrade9.5",
-        "rkw/rkw-mailer": "~9.5.0",
+        "rkw/rkw-mailer": "~9.5.0 || dev-feature/upgrade9.5",
         "rkw/rkw-registration": "~9.5.0 || dev-feature/upgrade9.5"
     },
     "autoload": {
