--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     ],
     "require": {
         "typo3/cms-core": "~7.6.0 || ~8.7.0",
-        "rkw/rkw-mailer": "~8.7.0",
-        "rkw/rkw-registration": "~8.7.17"
+        "rkw/rkw-mailer": "~8.7.0"
     },
     "autoload": {
         "psr-4": {
